--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ h1 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 3ex;
   color: rebeccapurple;
-  text-align: center;
-  background-color: rgb(173, 182, 230);
+  text-align: right;
+  /* background-color: rgb(183, 182, 230); */
 }
 
 h2 {
@@ -13,8 +13,9 @@ h2 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 2.5ex;
   color: rebeccapurple;
+  text-decoration: underline;
   /* text-align: center; */
-  background-color: rgb(173, 182, 230);
+  /* background-color: rgb(173, 182, 230); */
 }
 
 h4 {
@@ -22,13 +23,13 @@ h4 {
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 2ex;
   color: rgb(32, 6, 58);
-  text-align: center;
+  text-align: right;
   background-color: lightblue;
 }
 ul {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 2ex;
+  font-size: 1.7ex;
   color: rebeccapurple;
   text-align: "center";
 }
@@ -36,7 +37,7 @@ p {
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   font-size: 1.6ex;
-  color: rgb(45, 4, 83);
+  /* color: rgb(45, 4, 83); */
   margin-left: 10px;
 }
 
@@ -44,21 +45,21 @@ p {
   margin-top: 50px;
   margin-left: 50px;
   margin-right: 50px;
-  border: 5px outset rgb(56, 41, 187);
-  background-color: rgb(195, 201, 221);
+  /* border: 5px outset rgb(56, 41, 187); */
+  /* background-color: rgb(195, 201, 221); */
   /* background-image: url("Assets/self.jpg"); */
   text-align: center;
 }
 
 .info {
-  border: 5px outset rgb(56, 41, 187);
+  /* border: 5px outset rgb(56, 41, 187); */
   margin-top: 10px;
   margin-bottom: 50px;
   margin-left: 50px;
   margin-right: 50px;
   /* margin-left: auto;
   margin-right: auto; */
-  background-color: rgb(195, 201, 221);
+  /* background-color: rgb(195, 201, 221); */
   color: black;
 }
 .icon-bar {
@@ -69,51 +70,21 @@ p {
   text-align: right;
 }
 
-/*Social Links*/
-/* .fa {
-  padding: 20px;
-  text-align: center;
-  margin: 5px 2px;
-  font-size: 30px;
-  width: 50px;
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: 18px;
+  }
+  h2 {
+    font-size: 16px;
+  }
+  h4 {
+    font-size: 10px;
+    background-color: white;
+  }
+  p {
+    font-size: 13px;
+  }
+  ul {
+    font-size: 13px;
+  }
 }
-.fa-facebook {
-  background: #3b5998;
-  color: white;
-}
-.fa-twitter {
-  background: #55acee;
-  color: white;
-}
-.fa-pinterest {
-  background: #cb2027;
-  color: white;
-}
-.fa-linkedin {
-  background: #007bb5;
-  color: white;
-}
-.fa-instagram {
-  background: #125688;
-  color: white;
-}
-.fa-youtube {
-  background: #bb0000;
-  color: white;
-}
-.fa-google {
-  background: #dd4b39;
-  color: white;
-}
-.fa-snapchat-ghost {
-  background: #fffc00;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
-.fa-skype {
-  background: #00aff0;
-  color: white;
-}
-.fa:hover {
-  opacity: 0.9;
-} */
