--- a/style.css
+++ b/style.css
@@ -72,13 +72,14 @@ p {
 
 @media only screen and (max-width: 600px) {
   h1 {
-    font-size: 19px;
+    font-size: 20px;
+    text-decoration: ;
   }
   h2 {
     font-size: 16px;
   }
   h4 {
-    font-size: 12px;
+    font-size: 13px;
     background-color: white;
   }
   p {
