--- a/style.css
+++ b/style.css
@@ -72,11 +72,11 @@ p {
 
 @media only screen and (max-width: 600px) {
   h1 {
-    font-size: 20px;
-    text-decoration: ;
+    font-size: 22px;
+    text-decoration: none;
   }
   h2 {
-    font-size: 16px;
+    font-size: 15px;
   }
   h4 {
     font-size: 13px;
