--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ p {
     margin-right: 150px;
     color: black;
   }
-  icon-bar {
+  .icon-bar {
     font-size: 20px;
     color: black;
     margin-top: 15px;
@@ -102,7 +102,7 @@ p {
     margin-right: 175px;
     color: black;
   }
-  icon-bar {
+  .icon-bar {
     font-size: 20px;
     color: black;
     margin-top: 15px;
